Fix z-index

--- a/public/index.css
+++ b/public/index.css
@@ -23,6 +23,7 @@ body {
   top: 0;
   right: 0;
   bottom: 0;
+  z-index: -1;
 }
 
 #support-canvas {
